Redesign invitation administration
